Added User API and Store API